# stm32-cmake-cpputest-template-project

./: .gitignore  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
Modules/Blinky/: CMakeLists.txt
Modules/Blinky/Include/: Blinky.h
Modules/Blinky/Source/: Blinky.c
Modules/Blinky/Test/: BlinkyTests.cpp
cmake/: user.cmake
projects/UnitTests/: CMakeLists.txt
projects/UnitTests/Include/: Helpers.h  NewOverrides.h
projects/UnitTests/Source/: Helpers.c
projects/UnitTests/TestSample/: CMakeLists.txt  Tests.cpp
projects/blinky-nucleo/: CMakeLists.txt  blinky-nucleo.ioc
projects/blinky-nucleo/Core/Src/: main.c
projects/blinky-nucleo/cmake/stm32cubemx/: CMakeLists.txt
